# data-scraping

./: LICENSE  app.py  log_setup.py  pyproject.toml  readme.md
src/databases/: influx.py  sqlite3_setup.py
src/web_scraping/bitcoin/: bitcoin.py  sample_response.json
src/web_scraping/entsoe/: sampledata.csv  sftp.py
